# techbuddy

./: Taskfile.yml  devbox.json  pyproject.toml  setup.sh
server/: main.py
server/utils/: jwt_utils.py
www/: rxconfig.py
www/app/: app.py  state.py
www/app/components/: info_list.py  labeled_input.py  sidebar.py  sidebar_button.py
www/app/components/chat/: chat.py
www/app/components/chat/components/: chat.py
www/app/components/reflex-chat/chat/: chat.py  state.py
www/app/layouts/: app_layout.py  auth_layout.py
www/app/pages/: chat_page.py  forgot_password.py  home.py  login.py  reset_password.py  signup.py
